# simplitx

./: .gitignore  CLAUDE.md  Makefile  PLAN1.md  PROJECT_SUMMARY.md  PUBLICATION_CHECKLIST.md  README.md  SILESIA_SEGMENTER_TUNING.md  configNotUsed.md  configSelector.md  configsel.md  db_export_parties_products.sql  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yaml  flow.md  migration.sql  pdf_jobs_backup_20251011_001932.sql  queueV2.md  s01_postgreimport_sensient.py  s01_postgreimport_stahl.md  simplifyJson.md  test_all_sil_variants.sh  test_all_variants.py  test_sil_regions.py  validate_sil_regions.py  whatIDid.md  whatIDid2.md
.claude/: settings.local.json
context/: CODE_OF_GOODS_BARANG.csv  CODE_OF_GOODS_JASA.csv  PopulatingJob_id.md  SKUBridge.md  efab8447-12dd-4fde-836e-670cba99eb7c.xml  howToFineTune.md  lineItemAi.md  lineItemAiP1.md  lineItemAiP2.md  lineItemAiP3.md  lineItemAiP4.md  lineItemAiP5.md  productInformation.md  productInformationP1.md  productInformationP1CCSONNET.md  productInformationP2.md  productInformationP2CCSONNET.md  productInformationP3.md  queuepagedesign.md  (+17 more)
services/kurs_pajak/: README.md  pyproject.toml
services/kurs_pajak/kurs_pajak/: __init__.py  app.py  backup.py  cli.py  config.py  db.py  loader.py  logging.py  models.py  numeral.py  parser.py  runtime.py  scheduler.py  scraper.py  time_utils.py
services/kurs_pajak/migrations/: 001_create_fx_tables.sql
services/kurs_pajak/tests/: conftest.py  test_db.py  test_numeral.py  test_parser.py
services/kurs_pajak/tests/fixtures/: sample_detail.html
(+3453 files in other folders)
