[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kurs-pajak"
version = "0.1.0"
description = "Scraper-loader for Indonesia's Kurs Pajak weekly FX rates"
authors = [{ name = "Simplitx" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104",
  "uvicorn[standard]>=0.24",
  "httpx>=0.25",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
  "dateparser>=1.2",
  "typer[all]>=0.9",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "cryptography>=41.0",
  "structlog>=23.2",
  "tzdata>=2023.3",
  "boto3>=1.28",
  "google-cloud-storage>=2.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
]

[project.scripts]
kurs-pajak = "kurs_pajak.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kurs_pajak*"]
